--- a/dev/partners.html
+++ b/dev/partners.html
@@ -93,7 +93,7 @@
 						</g>
 						</svg>
 					</a>
-					<a href="" class="menu_hor__icon">
+					<a href="favorite.html" class="menu_hor__icon">
 						<span class="menu_hor__icon-desc">Избранное</span>
 						<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							 viewBox="0 0 598.3 568.8" style="enable-background:new 0 0 598.3 568.8;" xml:space="preserve">
