--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -51,7 +51,7 @@
 									</li>
 
 									<li class="main_menu__item">
-										<a href="#" class="main_menu__link">Ход строительства</a>
+										<a href="building.html" class="main_menu__link">Ход строительства</a>
 										<ul class="main_menu_sub"></ul>
 									</li>
 
@@ -151,6 +151,7 @@
 									    <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
 									      <div class="panel-body">
 									        <ul class="main_menu_sub">
+														<li class="main_menu_sub__item"><a href="building.html" class="mian_menu_sub__link">Ход строительства</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Фото</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Онайн камера</a></li>
 													</ul>
