--- a/dev/favorite.html
+++ b/dev/favorite.html
@@ -62,8 +62,8 @@
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Планировки</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Доходные программы</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Как купить</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Ход строительства</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Контакты</a></li>
+					<li class="menu_hor__item"><a href="building.html" class="menu_hor__link">Ход строительства</a></li>
+					<li class="menu_hor__item"><a href="contacts.html" class="menu_hor__link">Контакты</a></li>
 				</ul>
 
 				<div class="menu_hor__icons">
