--- a/dev/upr.html
+++ b/dev/upr.html
@@ -57,11 +57,11 @@
 
 				<ul class="menu_hor__list">
 					<li class="menu_hor__item"><a href="" class="menu_hor__link menu_hor__link-selected">О проекте</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Выбор апартаментов</a></li>
+					<li class="menu_hor__item"><a href="select.html" class="menu_hor__link">Выбор апартаментов</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Программа доходности</a></li>
 					<li class="menu_hor__item"><a href="" class="menu_hor__link">Как купить</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Ход строительства</a></li>
-					<li class="menu_hor__item"><a href="" class="menu_hor__link">Контакты</a></li>
+					<li class="menu_hor__item"><a href="building.html" class="menu_hor__link">Ход строительства</a></li>
+					<li class="menu_hor__item"><a href="contacts.html" class="menu_hor__link">Контакты</a></li>
 				</ul>
 
 				<div class="menu_hor__icons">
