--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -36,7 +36,7 @@
 									<li class="main_menu__item">
 										<a href="#" class="main_menu__link">Инвестирование</a>
 										<ul class="main_menu_sub">
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Доходные программы</a></li>
+											<li class="main_menu_sub__item"><a href="programms.html" class="mian_menu_sub__link">Доходные программы</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Портфельные программы</a></li>
 										</ul>
 									</li>
@@ -126,7 +126,7 @@
 									      <div class="panel-body">
 									        <ul class="main_menu_sub">
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Инвестирование</a></li>
-														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Доходные программы</a></li>
+														<li class="main_menu_sub__item"><a href="programms.html" class="mian_menu_sub__link">Доходные программы</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Портфельные программы</a></li>
 													</ul>
 									      </div>
