--- a/dev/programms.html
+++ b/dev/programms.html
@@ -250,7 +250,7 @@
 							<div class="invest_programs__in row">
 								<div class="col-4">
 									<div class="invest_programs__in_title">Доходность:</div>
-									<div class="invest_programs__in_desc">
+									<div class="invest_programs__in_desc" style="transform: translateY(41px); -webkit-transform: translateY(41px);">
 										от <span class="invest_programs__in_desc-big">29 000</span> рублей
 									</div>
 								</div>
