--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -58,7 +58,7 @@
 									<li class="main_menu__item">
 										<a href="preims.html" class="main_menu__link">Преимущества</a>
 										<ul class="main_menu_sub">
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Локация и инфраструктура</a></li>
+											<li class="main_menu_sub__item"><a href="location.html" class="mian_menu_sub__link">Локация и инфраструктура</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Услуги собственникам</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Арендаторам</a></li>
 										</ul>
@@ -171,7 +171,7 @@
 									    <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">
 									      <div class="panel-body">
 									        <ul class="main_menu_sub">
-														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Локация и инфраструктура</a></li>
+														<li class="main_menu_sub__item"><a href="location.html" class="mian_menu_sub__link">Локация и инфраструктура</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Услуги собственникам</a></li>
 														<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Арендаторам</a></li>
 													</ul>
