--- a/dev/location.html
+++ b/dev/location.html
@@ -684,7 +684,15 @@
 
 
 
-						<div role="tabpanel" class="location_info tab-pane fade" id="tab_2">12312313</div>
+						<div role="tabpanel" class="location_info tab-pane fade" id="tab_2">
+							<div class="location_title">Местоположение – <br>ключ к успеху! </div>
+							<div class="txt">
+У апарт-комплекса VALO выгодное расположение для всех категорий покупателей: и тех, кто планирует жить в комплексе, и тех, кто инвестирует в недвижимость. Фрунзенский район — «географическое сердце» современного Петербурга: на карте он находится в самом центре относительно границ города. С момента открытия станции метро «Бухарестская» началось активное развитие этой территории, и сегодня это один из самых популярных районов у девелоперов. Здесь проживает около полумиллиона человек, для которых создается социальная, коммерческая и развлекательная инфраструктура, обустраиваются зоны отдыха.
+Локация VALO удобна и бизнес-туристам, и гостям города. Несомненное преимущество – метро в 1 минуте ходьбы. Всего несколько минут потребуется для того, чтобы добраться до самых популярных туристических мест Санкт-Петербурга, центра деловой активности и основных транспортных узлов. <br>
+В шаговой доступности – большой торговый комплекс «Континент» и парк развлечений MazaPark, ТРК «Рио». Район вокруг станции метро «Бухарестская» имеет развитую социальную инфраструктуру: здесь работают детские сады, школы и поликлиники. Рядом с апарт-комплексом находится несколько крупных учебных заведений: такое расположение будет неизменно привлекать иногородних студентов, желающих снять жилье поближе к месту учебы. Также рядом с комплексом располагается множество парков где можно гулять и прекрасно проводить врнемя с семьёй.
+							</div>
+
+						</div>
 						<div role="tabpanel" class="location_info tab-pane fade" id="tab_3">12312313</div>
 
 					</div>
