--- a/dev/invest.html
+++ b/dev/invest.html
@@ -198,7 +198,7 @@
 		
 
 					<div class="invest_list">
-						<div class="invest_item">
+						<div class="invest_item animated fade fade-bottom">
 							<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 36 34.1" style="enable-background:new 0 0 36 34.1;" xml:space="preserve">
 							<style type="text/css">
@@ -225,7 +225,7 @@
 							</svg>
 							<div class="invest_item__desc">Апарт-комплекс расположен недалеко от центра города, транспортная доступность обеспечивает легкое сообщение с любым районом города. Это тот фактор, который всегда будет привлекать большой поток гостей.</div>
 						</div>
-						<div class="invest_item">
+						<div class="invest_item animated fade fade-bottom">
 							<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 247.6 264.7" style="enable-background:new 0 0 247.6 264.7;" xml:space="preserve">
 							<style type="text/css">
@@ -264,7 +264,7 @@
 							</svg>
 							<div class="invest_item__desc">Инвестиции в другие виды недвижимости – например, инвестиции в строительство квартиры, как правило, менее привлекательны. По данным аналитиков рынка недвижимости, квартиры в новостройках едва ли приносят владельцам 2-3%.</div>
 						</div>
-						<div class="invest_item">
+						<div class="invest_item animated fade fade-bottom">
 							<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 74.7 74.7" style="enable-background:new 0 0 74.7 74.7;" xml:space="preserve">
 							<style type="text/css">
@@ -315,7 +315,7 @@
 							</svg>
 							<div class="invest_item__desc">На этапе строительства стоимость апартаментов несколько ниже, чем квартир, а после – значительно выше. Апартаменты – это изначально ликвидный актив. Причем их, как и квартиру, можно приобрести в рассрочку или в кредит.</div>
 						</div>
-						<div class="invest_item">
+						<div class="invest_item animated fade fade-bottom">
 							<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 85.3 69.5" style="enable-background:new 0 0 85.3 69.5;" xml:space="preserve">
 							<style type="text/css">
@@ -365,7 +365,7 @@
 
 							<div class="invest_item__desc">Апартаменты не требуют постоянного участия собственника в работе с гостями. Управляющая компания берет на себя все заботы по страховке, уборке, охране, ремонту, поиску гостей и взысканию с них квартплаты.</div>
 						</div>
-						<div class="invest_item">
+						<div class="invest_item animated fade fade-bottom">
 							<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 135.1 135.1" style="enable-background:new 0 0 135.1 135.1;" xml:space="preserve">
 							<style type="text/css">
@@ -443,7 +443,7 @@
 
 							<div class="invest_item__desc">Доход обеспечивает управляющая компания. Сейчас УК «Вало Сервис» предлагает три доходные программы апартаментов. Инвестор может выбрать ту программу, которая больше отвечает его текущим потребностям.</div>
 						</div>
-						<div class="invest_item">
+						<div class="invest_item animated fade fade-bottom">
 							<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 27.7 32" style="enable-background:new 0 0 27.7 32;" xml:space="preserve">
 							<style type="text/css">
