--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -29,7 +29,7 @@
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Планировки</a></li>
 											<li class="main_menu_sub__item"><a href="commerce.html" class="mian_menu_sub__link">Коммерческие помещения</a></li>
 											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Паркинг</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Отделка и мебель</a></li>
+											<li class="main_menu_sub__item"><a href="otdelka.html" class="mian_menu_sub__link">Отделка и мебель</a></li>
 										</ul>
 									</li>
 
@@ -37,7 +37,7 @@
 										<a href="invest.html" class="main_menu__link">Инвестирование</a>
 										<ul class="main_menu_sub">
 											<li class="main_menu_sub__item"><a href="programms.html" class="mian_menu_sub__link">Доходные программы</a></li>
-											<li class="main_menu_sub__item"><a href="" class="mian_menu_sub__link">Портфельные программы</a></li>
+											<li class="main_menu_sub__item"><a href="porfel.html" class="mian_menu_sub__link">Портфельные программы</a></li>
 										</ul>
 									</li>
 
