chto_takoe_valo

--- a/dev/_menu.html
+++ b/dev/_menu.html
@@ -69,6 +69,7 @@
 										<ul class="main_menu_sub">
 											<li class="main_menu_sub__item"><a href="news_page.html" class="mian_menu_sub__link">Новость</a></li>
 											<li class="main_menu_sub__item"><a href="building_page.html" class="mian_menu_sub__link">Ход строительства ГОД</a></li>
+											<li class="main_menu_sub__item"><a href="cto_takoe_valo.html" class="mian_menu_sub__link">Что такое Valo</a></li>
 
 										</ul>
 									</li>
