--- a/dev/otdelka.html
+++ b/dev/otdelka.html
@@ -330,14 +330,14 @@
 								<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 									 viewBox="0 0 595.1 565.2" style="enable-background:new 0 0 595.1 565.2;" xml:space="preserve">
 								<style type="text/css">
-									.st0{clip-path:url(#SVGID_2_);}
+									.st0{clip-path:url(#icon3i);}
 								</style>
 								<g>
 									<defs>
-										<rect id="SVGID_1_" y="0" width="595.1" height="565.2"/>
+										<rect id="icon3a" y="0" width="595.1" height="565.2"/>
 									</defs>
-									<clipPath id="SVGID_2_">
-										<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+									<clipPath id="icon3i">
+										<use xlink:href="#icon3a"  style="overflow:visible;"/>
 									</clipPath>
 									<path class="st0" d="M102.1,181.5c-4-11.4-7.8-22.1-11.5-33c-2.4-7.2-4.7-14.5-6.7-21.9c-2.7-10.2,4-19.6,14.5-20.7
 										c2.1-0.2,4.3-0.2,6.5-0.2c56.3,0,112.6,0,169,0h6.7c0.2-1.1,0.4-1.9,0.4-2.7c0-16.3,0.1-32.7,0-49c-0.1-11-7.8-19.1-19.2-20.8
