--- a/dev/porfel.html
+++ b/dev/porfel.html
@@ -286,61 +286,57 @@
 
 							<div class="commerce_icons_item">
 								<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-									 viewBox="0 0 595.3 841.9" style="enable-background:new 0 0 595.3 841.9;" xml:space="preserve">
+									 viewBox="0 0 75.8 75.5" style="enable-background:new 0 0 75.8 75.5;" xml:space="preserve">
 								<style type="text/css">
-									.st0{}
+									.st0{stroke-width:2;}
 								</style>
-								<path class="st0" d="M1053.3,310.7c0.9-2.8,1.7-5.5,2.6-8.3c2.4-7.6,4.7-15.3,7.1-22.9c0.9-2.8,3.3-4.5,6.1-4.4
-									c2.7,0.1,5.1,2,5.7,4.8c0.3,1.2,0.2,2.4-0.2,3.6c-4.7,15.4-9.4,30.7-14.2,46.1c-0.1,0.3-0.3,0.6-0.5,0.8c-2,1.7-4,3.3-6,5
-									c-0.5,0.4-0.8,0.8-0.7,1.5c0,0.3,0,0.6,0,1c-0.3,0-0.5,0-0.8,0c-17.2,0-34.3,0-51.5,0c-0.7,0-0.8-0.2-0.8-0.8c0-24.4,0-48.7,0-73.1
-									c0-0.7,0.2-0.8,0.8-0.8c12.9,0,25.9,0,38.8,0c0.5,0,0.8,0.1,1.1,0.5c3.9,3.9,7.9,7.9,11.8,11.8c0.3,0.3,0.5,0.7,0.5,1.2
-									c0,11.2,0,22.4,0,33.5c0,0.2,0,0.5,0,0.7C1053.3,310.7,1053.3,310.7,1053.3,310.7z M1050.7,335.3c-0.1-0.2-0.1-0.4-0.2-0.7
-									c-0.7-2.4-1.4-4.8-2-7.2c-0.1-0.4-0.1-0.8,0-1.2c0.7-2.2,1.4-4.5,2-6.7c0.1-0.4,0.2-0.9,0.2-1.3c0-13.3,0-26.6,0-39.9
-									c0-0.2,0-0.5,0-0.8c-4,0-8,0-12.1,0c0-4,0-8,0-12c-12.1,0-24.1,0-36.1,0c0,23.3,0,46.5,0,69.8
-									C1018.7,335.3,1034.7,335.3,1050.7,335.3z M1061.5,292.3c-3.5,11.3-6.9,22.4-10.4,33.7c0.9,0.2,1.7,0.4,2.5,0.6
-									c3.5-11.2,6.9-22.3,10.4-33.4C1063.1,292.9,1062.4,292.6,1061.5,292.3z M1058.4,327.8c3.4-11.1,6.8-22,10.2-33
-									c-0.8-0.3-1.5-0.5-2.3-0.8c-3.4,11.1-6.9,22.1-10.3,33.2C1056.8,327.4,1057.6,327.6,1058.4,327.8z M1063.7,285.3
-									c2.4,0.8,4.7,1.5,7.1,2.3c0.5-1.6,1-3.2,1.5-4.8c0.2-0.6,0.2-1.3,0.2-1.9c-0.1-1.7-1.4-3.1-3.1-3.4c-1.7-0.3-3.4,0.7-4,2.4
-									C1064.8,281.6,1064.3,283.4,1063.7,285.3z M1048.8,275c-2.6-2.6-5.1-5.1-7.6-7.7c0,2.5,0,5.1,0,7.7
-									C1043.8,275,1046.3,275,1048.8,275z M1063,287.6c-0.3,0.8-0.5,1.6-0.8,2.5c2.4,0.8,4.7,1.6,7,2.4c0.3-0.9,0.5-1.7,0.8-2.6
-									C1067.7,289.1,1065.4,288.3,1063,287.6z M1051.3,328.5c0.5,1.6,0.9,3.1,1.3,4.6c1.3-1.1,2.6-2.2,4-3.3
-									C1054.8,329.4,1053.1,329,1051.3,328.5z"/>
-								<path class="st0" d="M1035.1,283.5c0,4.4,0,8.8,0,13.2c0.8,0,1.6,0,2.4,0c0-5.6,0-11.2,0-16.8c2.4,0,4.8,0,7.2,0
-									c0,5.6,0,11.2,0,16.8c1.2,0,2.4,0,3.6,0c0,0.8,0,1.6,0,2.4c-14.4,0-28.8,0-43.3,0c0-0.8,0-1.5,0-2.3c1.2,0,2.3,0,3.6,0
-									c0-1.6,0-3.2,0-4.8c2.4,0,4.8,0,7.2,0c0,1.6,0,3.1,0,4.7c0.8,0,1.6,0,2.4,0c0-3.2,0-6.3,0-9.5c2.4,0,4.8,0,7.2,0c0,3.2,0,6.3,0,9.5
-									c0.8,0,1.6,0,2.4,0c0-4.3,0-8.7,0-13.1C1030.3,283.5,1032.7,283.5,1035.1,283.5z M1042.4,296.7c0-0.3,0-0.6,0-0.8
-									c0-3.9,0-7.9,0-11.8c0-0.5,0-0.9,0-1.4c0-0.1-0.2-0.4-0.3-0.4c-0.7,0-1.3,0-2,0c0,4.8,0,9.6,0,14.4
-									C1040.8,296.7,1041.5,296.7,1042.4,296.7z M1030.4,285.9c0,3.6,0,7.2,0,10.8c0.8,0,1.5,0,2.3,0c0-3.6,0-7.2,0-10.8
-									C1031.9,285.9,1031.2,285.9,1030.4,285.9z M1020.7,289.5c0,2.4,0,4.8,0,7.2c0.8,0,1.5,0,2.3,0c0-2.4,0-4.8,0-7.2
-									C1022.2,289.5,1021.5,289.5,1020.7,289.5z M1011.1,294.3c0,0.8,0,1.6,0,2.3c0.8,0,1.6,0,2.3,0c0-0.8,0-1.6,0-2.3
-									C1012.6,294.3,1011.9,294.3,1011.1,294.3z"/>
-								<path class="st0" d="M1008.6,314.8c0.8,0,1.6,0,2.4,0c0,0.4,0,0.7,0,1.1c0,1.4,0.9,2.4,2.4,2.5c0.8,0,1.6,0,2.4,0
+								<path class="st0" d="M53.5,48.1c0.9-2.8,1.7-5.5,2.6-8.3c2.4-7.6,4.7-15.3,7.1-22.9c0.9-2.8,3.3-4.5,6.1-4.4c2.7,0.1,5.1,2,5.7,4.8
+									c0.3,1.2,0.2,2.4-0.2,3.6c-4.7,15.4-9.4,30.7-14.2,46.1c-0.1,0.3-0.3,0.6-0.5,0.8c-2,1.7-4,3.3-6,5c-0.5,0.4-0.8,0.8-0.7,1.5
+									c0,0.3,0,0.6,0,1c-0.3,0-0.5,0-0.8,0c-17.2,0-34.3,0-51.5,0c-0.7,0-0.8-0.2-0.8-0.8c0-24.4,0-48.7,0-73.1c0-0.7,0.2-0.8,0.8-0.8
+									c12.9,0,25.9,0,38.8,0c0.5,0,0.8,0.1,1.1,0.5C45,4.8,49,8.8,52.9,12.7c0.3,0.3,0.5,0.7,0.5,1.2c0,11.2,0,22.4,0,33.5
+									c0,0.2,0,0.5,0,0.7C53.5,48.1,53.5,48.1,53.5,48.1z M50.9,72.7c-0.1-0.2-0.1-0.4-0.2-0.7c-0.7-2.4-1.4-4.8-2-7.2
+									c-0.1-0.4-0.1-0.8,0-1.2c0.7-2.2,1.4-4.5,2-6.7c0.1-0.4,0.2-0.9,0.2-1.3c0-13.3,0-26.6,0-39.9c0-0.2,0-0.5,0-0.8c-4,0-8,0-12.1,0
+									c0-4,0-8,0-12c-12.1,0-24.1,0-36.1,0c0,23.3,0,46.5,0,69.8C18.9,72.7,34.9,72.7,50.9,72.7z M61.7,29.8C58.3,41,54.8,52.2,51.3,63.4
+									c0.9,0.2,1.7,0.4,2.5,0.6c3.5-11.2,6.9-22.3,10.4-33.4C63.3,30.3,62.6,30.1,61.7,29.8z M58.6,65.2c3.4-11.1,6.8-22,10.2-33
+									c-0.8-0.3-1.5-0.5-2.3-0.8C63,42.5,59.6,53.5,56.1,64.6C57,64.8,57.8,65,58.6,65.2z M63.9,22.7c2.4,0.8,4.7,1.5,7.1,2.3
+									c0.5-1.6,1-3.2,1.5-4.8c0.2-0.6,0.2-1.3,0.2-1.9c-0.1-1.7-1.4-3.1-3.1-3.4c-1.7-0.3-3.4,0.7-4,2.4C65,19,64.5,20.8,63.9,22.7z
+									 M49.1,12.4c-2.6-2.6-5.1-5.1-7.6-7.7c0,2.5,0,5.1,0,7.7C44,12.4,46.5,12.4,49.1,12.4z M63.2,25c-0.3,0.8-0.5,1.6-0.8,2.5
+									c2.4,0.8,4.7,1.6,7,2.4c0.3-0.9,0.5-1.7,0.8-2.6C67.9,26.5,65.6,25.8,63.2,25z M51.5,65.9c0.5,1.6,0.9,3.1,1.3,4.6
+									c1.3-1.1,2.6-2.2,4-3.3C55,66.8,53.3,66.4,51.5,65.9z"/>
+								<path class="st0" d="M35.3,21c0,4.4,0,8.8,0,13.2c0.8,0,1.6,0,2.4,0c0-5.6,0-11.2,0-16.8c2.4,0,4.8,0,7.2,0c0,5.6,0,11.2,0,16.8
+									c1.2,0,2.4,0,3.6,0c0,0.8,0,1.6,0,2.4c-14.4,0-28.8,0-43.3,0c0-0.8,0-1.5,0-2.3c1.2,0,2.3,0,3.6,0c0-1.6,0-3.2,0-4.8
+									c2.4,0,4.8,0,7.2,0c0,1.6,0,3.1,0,4.7c0.8,0,1.6,0,2.4,0c0-3.2,0-6.3,0-9.5c2.4,0,4.8,0,7.2,0c0,3.2,0,6.3,0,9.5c0.8,0,1.6,0,2.4,0
+									c0-4.3,0-8.7,0-13.1C30.5,21,32.9,21,35.3,21z M42.6,34.1c0-0.3,0-0.6,0-0.8c0-3.9,0-7.9,0-11.8c0-0.5,0-0.9,0-1.4
+									c0-0.1-0.2-0.4-0.3-0.4c-0.7,0-1.3,0-2,0c0,4.8,0,9.6,0,14.4C41,34.1,41.7,34.1,42.6,34.1z M30.6,23.3c0,3.6,0,7.2,0,10.8
+									c0.8,0,1.5,0,2.3,0c0-3.6,0-7.2,0-10.8C32.1,23.3,31.4,23.3,30.6,23.3z M21,27c0,2.4,0,4.8,0,7.2c0.8,0,1.5,0,2.3,0
+									c0-2.4,0-4.8,0-7.2C22.5,27,21.7,27,21,27z M11.3,31.8c0,0.8,0,1.6,0,2.3c0.8,0,1.6,0,2.3,0c0-0.8,0-1.6,0-2.3
+									C12.8,31.8,12.1,31.8,11.3,31.8z"/>
+								<path class="st0" d="M8.8,52.3c0.8,0,1.6,0,2.4,0c0,0.4,0,0.7,0,1.1c0,1.4,0.9,2.4,2.4,2.5c0.8,0,1.6,0,2.4,0
 									c1.4-0.1,2.4-1.1,2.4-2.5c0-1.3-1.1-2.3-2.5-2.3c-0.8,0-1.6,0-2.4,0c-2.5,0-4.6-2-4.7-4.4c-0.2-2.5,1.5-4.7,4-5.1
 									c0.2,0,0.5-0.1,0.8-0.1c0-0.8,0-1.5,0-2.3c0.8,0,1.6,0,2.4,0c0,0.8,0,1.5,0,2.3c1.7,0.1,3,0.8,4,2.1c0.8,1.2,1,2.5,0.9,3.9
 									c-0.8,0-1.6,0-2.4,0c0-0.4,0-0.8,0-1.2c0-1.3-1-2.3-2.3-2.3c-0.9,0-1.7,0-2.6,0c-1.3,0-2.3,1.1-2.3,2.4c0,1.3,0.9,2.3,2.3,2.4
 									c1,0,2.1,0,3.1,0.1c2.4,0.3,4.3,2.4,4.2,4.8c0,2.5-1.9,4.5-4.3,4.8c-0.1,0-0.3,0-0.5,0.1c0,0.8,0,1.5,0,2.3c-0.8,0-1.6,0-2.4,0
-									c0-0.6,0-1.2,0-1.8c0-0.4-0.1-0.5-0.5-0.6c-2.6-0.3-4.3-2.3-4.3-4.9C1008.6,315.6,1008.6,315.2,1008.6,314.8z"/>
-								<path class="st0" d="M1046,303.9c-6.5,0-12.8,0-19.2,0c0-0.8,0-1.5,0-2.4c0.3,0,0.5,0,0.7,0c5.9,0,11.8,0,17.8,0
-									c0.6,0,0.8,0.1,0.8,0.7C1045.9,302.8,1046,303.3,1046,303.9z"/>
-								<path class="st0" d="M1026.7,308.8c0-0.8,0-1.6,0-2.4c6.4,0,12.8,0,19.2,0c0,0.7,0,1.4,0,2c0,0.1-0.2,0.3-0.3,0.3
-									c-0.1,0.1-0.3,0-0.4,0c-5.9,0-11.8,0-17.6,0C1027.3,308.8,1027,308.8,1026.7,308.8z"/>
-								<path class="st0" d="M1046,313.6c-6.5,0-12.8,0-19.2,0c0-0.8,0-1.5,0-2.4c0.2,0,0.5,0,0.7,0c5.9,0,11.9,0,17.8,0
-									c0.6,0,0.8,0.2,0.8,0.8C1045.9,312.5,1046,313,1046,313.6z"/>
-								<path class="st0" d="M1046,316c0,0.7,0,1.4,0,2c0,0.1-0.2,0.3-0.3,0.3c-0.1,0.1-0.3,0-0.4,0c-5.9,0-11.9,0-17.8,0
-									c-0.2,0-0.4,0-0.7,0c0-0.8,0-1.6,0-2.4C1033.1,316,1039.5,316,1046,316z"/>
-								<path class="st0" d="M1046,323.2c-6.5,0-12.8,0-19.2,0c0-0.8,0-1.5,0-2.4c0.2,0,0.5,0,0.7,0c5.9,0,11.9,0,17.8,0
-									c0.6,0,0.8,0.2,0.7,0.7C1045.9,322.1,1046,322.6,1046,323.2z"/>
-								<path class="st0" d="M1030.3,328c-6,0-12,0-18,0c0-0.8,0-1.5,0-2.3c6,0,12,0,18,0C1030.3,326.5,1030.3,327.2,1030.3,328z"/>
-								<path class="st0" d="M1012.3,330.5c6,0,12,0,18,0c0,0.8,0,1.5,0,2.3c-6,0-12,0-18,0C1012.3,332,1012.3,331.3,1012.3,330.5z"/>
-								<path class="st0" d="M1007.5,271.4c0-0.8,0-1.5,0-2.3c6,0,12,0,18,0c0,0.8,0,1.5,0,2.3C1019.5,271.4,1013.5,271.4,1007.5,271.4z"/>
-								<path class="st0" d="M1025.5,273.9c0,0.8,0,1.5,0,2.3c-6,0-12,0-18,0c0-0.8,0-1.5,0-2.3C1013.5,273.9,1019.4,273.9,1025.5,273.9z"/>
-								<path class="st0" d="M1027.9,271.4c0-0.8,0-1.5,0-2.3c0.8,0,1.6,0,2.4,0c0,0.8,0,1.5,0,2.3C1029.5,271.4,1028.8,271.4,1027.9,271.4z
-									"/>
-								<path class="st0" d="M1028,273.9c0.8,0,1.5,0,2.3,0c0,0.8,0,1.5,0,2.3c-0.8,0-1.5,0-2.3,0C1028,275.5,1028,274.7,1028,273.9z"/>
-								<path class="st0" d="M1009.8,328c-0.8,0-1.5,0-2.3,0c0-0.8,0-1.6,0-2.3c0.8,0,1.5,0,2.3,0C1009.8,326.4,1009.8,327.2,1009.8,328z"/>
-								<path class="st0" d="M1009.8,332.8c-0.8,0-1.5,0-2.3,0c0-0.8,0-1.5,0-2.3c0.8,0,1.5,0,2.3,0C1009.8,331.3,1009.8,332,1009.8,332.8z"
-									/>
+									c0-0.6,0-1.2,0-1.8c0-0.4-0.1-0.5-0.5-0.6c-2.6-0.3-4.3-2.3-4.3-4.9C8.8,53,8.8,52.6,8.8,52.3z"/>
+								<path class="st0" d="M46.2,41.3c-6.5,0-12.8,0-19.2,0c0-0.8,0-1.5,0-2.4c0.3,0,0.5,0,0.7,0c5.9,0,11.8,0,17.8,0
+									c0.6,0,0.8,0.1,0.8,0.7C46.1,40.2,46.2,40.7,46.2,41.3z"/>
+								<path class="st0" d="M26.9,46.2c0-0.8,0-1.6,0-2.4c6.4,0,12.8,0,19.2,0c0,0.7,0,1.4,0,2c0,0.1-0.2,0.3-0.3,0.3c-0.1,0.1-0.3,0-0.4,0
+									c-5.9,0-11.8,0-17.6,0C27.5,46.2,27.2,46.2,26.9,46.2z"/>
+								<path class="st0" d="M46.2,51c-6.5,0-12.8,0-19.2,0c0-0.8,0-1.5,0-2.4c0.2,0,0.5,0,0.7,0c5.9,0,11.8,0,17.8,0c0.6,0,0.8,0.2,0.8,0.8
+									C46.2,49.9,46.2,50.4,46.2,51z"/>
+								<path class="st0" d="M46.2,53.5c0,0.7,0,1.4,0,2c0,0.1-0.2,0.3-0.3,0.3c-0.1,0.1-0.3,0-0.4,0c-5.9,0-11.9,0-17.8,0
+									c-0.2,0-0.4,0-0.7,0c0-0.8,0-1.6,0-2.4C33.4,53.5,39.7,53.5,46.2,53.5z"/>
+								<path class="st0" d="M46.2,60.6c-6.5,0-12.8,0-19.2,0c0-0.8,0-1.5,0-2.4c0.2,0,0.5,0,0.7,0c5.9,0,11.9,0,17.8,0
+									c0.6,0,0.8,0.2,0.7,0.7C46.2,59.5,46.2,60,46.2,60.6z"/>
+								<path class="st0" d="M30.5,65.4c-6,0-12,0-18,0c0-0.8,0-1.5,0-2.3c6,0,12,0,18,0C30.5,63.9,30.5,64.6,30.5,65.4z"/>
+								<path class="st0" d="M12.5,67.9c6,0,12,0,18,0c0,0.8,0,1.5,0,2.3c-6,0-12,0-18,0C12.5,69.5,12.5,68.7,12.5,67.9z"/>
+								<path class="st0" d="M7.7,8.8c0-0.8,0-1.5,0-2.3c6,0,12,0,18,0c0,0.8,0,1.5,0,2.3C19.7,8.8,13.7,8.8,7.7,8.8z"/>
+								<path class="st0" d="M25.7,11.3c0,0.8,0,1.5,0,2.3c-6,0-12,0-18,0c0-0.8,0-1.5,0-2.3C13.7,11.3,19.6,11.3,25.7,11.3z"/>
+								<path class="st0" d="M28.1,8.8c0-0.8,0-1.5,0-2.3c0.8,0,1.6,0,2.4,0c0,0.8,0,1.5,0,2.3C29.7,8.8,29,8.8,28.1,8.8z"/>
+								<path class="st0" d="M28.2,11.3c0.8,0,1.5,0,2.3,0c0,0.8,0,1.5,0,2.3c-0.8,0-1.5,0-2.3,0C28.2,12.9,28.2,12.1,28.2,11.3z"/>
+								<path class="st0" d="M10,65.4c-0.8,0-1.5,0-2.3,0c0-0.8,0-1.6,0-2.3c0.8,0,1.5,0,2.3,0C10,63.9,10,64.6,10,65.4z"/>
+								<path class="st0" d="M10,70.3c-0.8,0-1.5,0-2.3,0c0-0.8,0-1.5,0-2.3c0.8,0,1.5,0,2.3,0C10,68.7,10,69.4,10,70.3z"/>
 								</svg>
+
 
 								<div class="commerce_icons_item__title">Покупка «портфеля» гарантирует более стабильный доход круглый год</div>
 							</div>
